--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
     <title>Getting Started</title>
-    <link rel="stylesheet" href="style.css"/
+    <link rel="stylesheet" href="style.css"/>
     <script type="text/javascript" src="app.js"></script>
   </head>
 
